* implemented download queue, meaning the user can simply add streams to the queue and the streams download in the background
	* opted not to make an abstract queue_stream class that contains all the details needed
	* will search for a way to optimize the process in the future
* implemented a display for the download queue; separated widgets related to search and widgets related to download
YT-DL-GUI Version 0.11
* implemented label that shows "Loading..." while details and options are still loading
* handled exception related to HTTP Error 404 
YT-DL-GUI Version 0.10
* implemented string slicing on the video title if it's too long
	* string[0:END:-1] doesn't work; string[0:END][::-1] does (to get the index of whitespace within the char_per_line limit)
* implemented exception handling for filenames that are invalid or already taken by an existing file
	* when implementing download queue in the future, must also check if filename was already taken by an item in the queue
* implemented feature where if the user cancels the download, the incomplete download file is deleted
* moved the filename check above the configuration of buttons to avoid having to reset the buttons if the filename was already taken

20230418
YT-DL-GUI Version 0.09
* the search button now starts a thread of search_stream, just like how the download button starts a thread of download_stream
* removed the use of StringVar for some widgets; went with directly changing the ["text"] of widgets instead to use less variables
* for now, placed all features of functions related to search_stream such as display_image and display_stream into the search_stream functions
	* this is to avoid errors related to one thread loading before the other but lacking required information because the other function hasn't finished yet
* wrapped yt.length in float() for gmtime() to help avoid the error "int() argument must be a string, a bytes-like object or a real number, not 'NoneType'"